# internal/domain/request/add-member-to-team.go
@@ -1,0 +1,6 @@
+package request
+
+type AddMemberToTeam struct {
+	Session   string `json:"session"`
+	UserEmail string `json:"user_email"`
+}
