# internal/domain/request/update-give-points.go
@@ -1,0 +1,7 @@
+package request
+
+type UpdateGivePoints struct {
+	Session     string `json:"session"`
+	TeamId      int    `json:"team_id"`
+	DeltaPoints int    `json:"spend_points"`
+}
