# internal/domain/request/update-spend-points.go
@@ -1,0 +1,7 @@
+package request
+
+type UpdateSpendPoints struct {
+	Session     string `json:"session"`
+	TeamId      int    `json:"team_id"`
+	DeltaPoints int    `json:"spend_points"`
+}
