# internal/domain/request/update-team.go
@@ -1,0 +1,6 @@
+package request
+
+type UpdateTeam struct {
+	NewTeamName string `json:"new_team_name"`
+	Session     string `json:"session"`
+}
